# Aider_Bench_Harness

./: .env.example  .gitignore  MiniMax _ liteLLM.html  Model warnings _ aider.html  README.md  Score?  UX-Cockpit.md  Versuchsaufbau.md  Visualisierung.md  harness_architecture.html  harness_logic_flow.html  harness_parallel_experiment.html  index.html  pyproject.toml
MiniMax _ liteLLM_files/: client_default_c0db8c0.css  client_default_c0db8c0.js  js  l.js  main.eb1a58af.js  runtime~main.20bb7d29.js  styles.42af08e7.css  v1.2.js
Model warnings _ aider_files/: just-the-docs-default.css
data/: experiment_config.json  selected_tasks.example.json  selected_tasks_e2e.json  tasks_astropy_small.json
docs/: ADD_NEW_RULE.md  mini_eval_rig.md
harness/: CONVENTIONS.R01.md  CONVENTIONS.R01_R02.md  CONVENTIONS.R01_R03.md  CONVENTIONS.R01_R04.md  CONVENTIONS.R02.md  CONVENTIONS.R02_R03.md  CONVENTIONS.R02_R04.md  CONVENTIONS.R03.md  CONVENTIONS.R03_R04.md  CONVENTIONS.R04.md  CONVENTIONS.baseline.md  CONVENTIONS.baseline_v0_plus_S01.md  CONVENTIONS.baseline_v0_plus_S02.md  CONVENTIONS.baseline_v0_plus_S03.md  CONVENTIONS.negative_control_karpathy40.md  CONVENTIONS.v0_plus_R01.md  CONVENTIONS.v0_plus_R02.md  CONVENTIONS.v0_plus_R03.md  CONVENTIONS.v0_plus_R04.md  KarparthysClaude.md  aider-config.example.yml
runner/: 15measure_baseline.py  __init__.py  analyze.py  calibrate.py  config.py  db.py  events.py  experiment_runner.py  experiment_summarize.py  fail_fast.py  failure_reasons.py  judge.py  metrics.py  paths.py  preflight.py  run_matrix.py  run_once.py  summarize.py  (+2 more)
(+41 files in other folders)
